Change title and meta tags for UI Developer role
Updated title and meta description to reflect a change in focus from Frontend Developer to UI Developer/Designer. Adjusted button text and bio to align with the new role.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Shijin - Frontend Web Developer</title>
+    <title>Shijin - UI Developer/Designer</title>
 
-    <meta name="title" content="Shijin - Frontend Web Developer">
-    <meta name="description" content="Shijin P - Passionate Frontend Web Developer creating beautiful and responsive websites. Explore my portfolio and blog for tech insights.">
+    <meta name="title" content="Shijin - UI Specialist">
+    <meta name="description" content="Shijin P - Passionate UI Developer and Designer creating beautiful and responsive apps and websites. Explore my portfolio and blog for tech insights.">
     <meta name="keywords" content="Shijin P, Web Developer, Frontend Developer, Portfolio, Blog, Tech Insights">
     <meta name="author" content="Shijin P">
 
@@ -99,8 +99,8 @@
                 <div class="col-lg-7 order-lg-1 hero-content">
                     <span class="h3" data-aos="fade-up" data-aos-delay="0">Hello, I'm</span>
                     <h1 class="name" data-aos="fade-up" data-aos-delay="200"><span>Shijin Pavithran</h1>
-                    <button type="button" class="btn btn-sm mt-3 mb-3 btn-showcase"  data-aos="fade-up" data-aos-delay="400"><i class="bi bi-stars"></i> Frontend Developer</button>
-                    <p class="tagline mb-3" data-aos="fade-up" data-aos-delay="600">As a Frontend Developer, Designer, I like to craft solid and scalable frontend products with great user experiences. I am proficient in translating designs from Figma, PSD, and XD into responsive code. Additionally, I have experience with jQuery Library and JavaScript.
+                    <button type="button" class="btn btn-sm mt-3 mb-3 btn-showcase"  data-aos="fade-up" data-aos-delay="400"><i class="bi bi-stars"></i> UI Specalist</button>
+                    <p class="tagline mb-3" data-aos="fade-up" data-aos-delay="600">As a UI Developer, Designer, I like to craft solid and scalable frontend products with great user experiences. I am proficient in translating designs from Figma, PSD, and XD into responsive code. Additionally, I have experience with jQuery Library and JavaScript.
 
                         I have more than 9 years of experience with <span class="underline">HTML5, CSS3, Wordpress, Bootstrap, and the SASS CSS framework</span>. I have expertise in <span class="underline">Flexbox, Grid layouts</span>, and creating webapps with Cross-Browser & Cross-Platform compatibility.</p>
                    
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-lg-7">
                     <p class="bio">
-                        Hey there, I'm Shijin, a coding enthusiast from India. I've built products for companies and businesses around the globe ranging from marketing websites to complex solutions and enterprise apps with focus on fast, elegant and accessible user experiences. </br></br>I'm currently working as a frontend web developer in Unity Infotech, a company providing banking solutions mostly in GCC countries.
+                        Hey there, I'm Shijin, a coding enthusiast from India. I've built products for companies and businesses around the globe, ranging from marketing websites to complex solutions and enterprise apps with focus on fast, elegant and accessible user experiences. </br></br>I'm currently working as a frontend web developer in Unity Infotech, a company providing banking solutions mostly in GCC countries.
                         </br></br>
                         My main goal in coding is simple: to create things that look great and serve a purpose. Whether it's designing sleek designs or expanding web applications, I'm always exploring new ideas to make something awesome.
                         </br></br>
@@ -190,6 +190,12 @@
             <h2 class="section-heading text-center">Skills</h2>
             <p class="text-center muted-text mt-3 mb-4">Here are some of the technologies that are part of my current stack:</p>
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
+                <div class="col">
+                    <div class="skill">
+                        <img class="skill-image" src="assets/images/skills/WordPress.svg" alt="C">
+                        <p class="skill-name">Designing</p>
+                    </div>
+                </div>
                 <div class="col">
                     <div class="skill">
                         <img class="skill-image" src="assets/images/skills/HTML.svg" alt="HTML">
@@ -220,12 +226,6 @@
                         <p class="skill-name">Sass</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="skill">
-                        <img class="skill-image" src="assets/images/skills/WordPress.svg" alt="C">
-                        <p class="skill-name">Wordpress</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -239,6 +239,12 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 tools-container" data-aos="fade-down" data-aos-delay="200">
                 <div class="col">
                     <div class="tool">
+                        <img class="tool-image" src="assets/images/tools/Figma.svg" alt="Figma">
+                        <p class="tool-name">Figma</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tool">
                         <img class="tool-image" src="assets/images/tools/vscode.svg" alt="VSCode">
                         <p class="tool-name">VSCode</p>
                     </div>
@@ -247,12 +253,6 @@
                     <div class="tool">
                         <img class="tool-image" src="assets/images/tools/cc.svg" alt="Adobe CC">
                         <p class="tool-name">Adobe CC</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="tool">
-                        <img class="tool-image" src="assets/images/tools/Figma.svg" alt="Figma">
-                        <p class="tool-name">Figma</p>
                     </div>
                 </div>
                 <div class="col">
